# search_house_telebot

./: .dockerignore  .gitignore  Dockerfile  README.md  celerybeat-schedule  create_db.py  db_shell.py  docker-compose.yaml  main.py  pyproject.toml  worker.py
bot/: bot.py
database/: __init__.py  db.py
database/models/: __init__.py  base.py  offer_olx.py  telegram.py  user.py
http_crawler/: __init__.py  http_crawler.py  olx.py
msg_adapter/: __init__.py  interface.py
offers_provider/: __init__.py  offers_provider.py
